@@ -7,6 +7,7 @@
 estimateVTL(
   formants,
   method = c("regression", "meanDispersion", "meanFormant")[1],
+  interceptZero = TRUE,
   speedSound = 35400,
   checkFormat = TRUE,
   output = c("simple", "detailed")[1],
@@ -21,6 +22,9 @@ default presets for speaker "M1"; a vector of formant frequencies like
 \code{list(f1 = c(500, 550), f2 = 1200))}}
 
 \item{method}{the method of estimating vocal tract length (see details)}
+
+\item{interceptZero}{if TRUE, forces the regression curve to pass through the
+origin, which corresponds to a closed-open tube (method = "regression" only)}
 
 \item{speedSound}{speed of sound in warm air, by default 35400 cm/s. Stevens
 (2000) "Acoustic phonetics", p. 138}
@@ -85,6 +89,10 @@ estimateVTL(
 # Missing values are OK
 estimateVTL(c(600, 1850, 3100, NA, 5000), plot = TRUE)
 estimateVTL(list(f1 = 500, f2 = c(1650, NA, 1400), f3 = 2700), plot = TRUE)
+
+# Normally it makes sense to assume that the vocal tract is a closed-open
+# tube, forcing the intercept to be zero. To relax this assumption:
+estimateVTL(c(600, 1850, 3100, NA, 5000), interceptZero = FALSE, plot = TRUE)
 
 # Note that VTL estimates based on the commonly reported 'meanDispersion'
 # depend only on the first and last formant
